--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		</section>
 
 		<section class="box3">
-			<button class="button1" onclick="document.location='travel.html'">START TRAVELING</button>
+			<button class="button1" onclick="document.location='https://withered-resonance-9121.oldham-cloudflare-interview-assignment.workers.dev/'">TEST CLOUDFLARE WORKERS</button>
 		</section>
 	</article>
 
